<resources>
    <string name="app_name">Rabbit vocabulary</string>

    <!--Login Screen-->
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="rabbit">Rabbit</string>

    <!--Home Screen-->
    <string name="language_selection">Language Selection</string>
    <string name="English">English</string>
    <string name="Portuguese">Portuguese</string>
    <string name="list_all_words">List all words</string>
    <string name="add_new_word">Add new word</string>
    <string name="show_games">Show games</string>

    <!--Add new word screen-->
    <string name="write_the_word">Write the Word</string>
    <string name="write_the_translation">Write the translation</string>
    <string name="save_word">Save Word</string>
    <string name="enter_description">Enter Description</string>

    <!--Show games screen-->
    <string name="game_translate_the_word_to_portuguese">Game Translate The Word To Portuguese</string>
    <string name="game_translate_the_word_to_english">Game Translate The Word To English</string>

    <!--Display all words screen-->
    <string name="these_are_all_your_registered_words">These are all your registered words</string>

    <!--Game Translate the word screen-->
    <string name="verify">Verify</string>
    <string name="translate">Translate</string>
    <string name="word_drawn">Word Drawn</string>
    <string name="score">Score</string>
    <string name="thirteen">13</string>
</resources>