<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_home_background_color"

    tools:context=".fragments.HomeFragment">


    <Switch
        android:id="@+id/language_selection_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="64dp"
        android:paddingLeft="10dp"
        android:switchMinWidth="66dp"


        android:switchPadding="20dp"
        android:text="@string/language_selection"
        android:textSize="18sp"
        android:textStyle="bold"

        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"


        android:textOff="@string/English"
        android:textOn="@string/Portuguese"


        android:thumb="@drawable/thumb_selector"
        android:track="@drawable/shape_switche_button"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <View
        android:id="@+id/card_list_all_words"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/shape_option_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_selection_switch_button" />


    <TextView
        android:id="@+id/title_list_all_words"
        style="@style/title_option_cards"
        android:background="@drawable/shape_option_cards"
        android:text="@string/list_all_words"
        app:layout_constraintBottom_toBottomOf="@+id/card_list_all_words"
        app:layout_constraintEnd_toEndOf="@+id/card_list_all_words"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/card_list_all_words"
        app:layout_constraintTop_toTopOf="@+id/card_list_all_words" />

    <View
        android:id="@+id/card_add_new_word"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="68dp"
        android:background="@drawable/shape_option_cards_two"
        app:layout_constraintBottom_toBottomOf="@+id/card_list_all_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/title_list_all_words"
        app:layout_constraintTop_toTopOf="@+id/card_list_all_words"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/title_option_cards"
        android:layout_width="111dp"
        android:layout_height="22dp"
        android:text="@string/add_new_word"
        app:layout_constraintBottom_toBottomOf="@+id/card_add_new_word"
        app:layout_constraintEnd_toEndOf="@+id/card_add_new_word"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/card_add_new_word"
        app:layout_constraintTop_toTopOf="@+id/card_add_new_word"
        app:layout_constraintVertical_bias="0.489" />

    <View
        android:id="@+id/card_show_games"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/shape_option_cards"
        app:layout_constraintEnd_toEndOf="@+id/card_list_all_words"
        app:layout_constraintStart_toStartOf="@+id/card_list_all_words"
        app:layout_constraintTop_toBottomOf="@+id/card_list_all_words" />

    <TextView
        style="@style/title_option_cards"
        android:text="@string/show_games"
        app:layout_constraintBottom_toBottomOf="@+id/card_show_games"
        app:layout_constraintEnd_toEndOf="@+id/card_show_games"
        app:layout_constraintStart_toStartOf="@+id/card_show_games"
        app:layout_constraintTop_toTopOf="@+id/card_show_games"
        app:layout_constraintVertical_bias="0.494" />
</androidx.constraintlayout.widget.ConstraintLayout>