<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/shape_login_background">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:elevation="30dp"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="60dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="61dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rabbit_logo02_removebg_preview"
                    android:contentDescription="@string/rabbit" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/app_name"
                android:textColor="@color/primary_text_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                style="@style/edit_text"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText2"
                style="@style/edit_text"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_button"


                android:text="@string/login"
                android:textColor="@color/secondary_text_color"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
                tools:layout_editor_absoluteX="32dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/create_an_account"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>